--- a/demo/horizontal-form.html
+++ b/demo/horizontal-form.html
@@ -14,7 +14,7 @@
         <div class="col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <h1 class="panel-title">General Form</h1>
+              <h1 class="panel-title">Horizontal Form</h1>
             </div>
             <div class="panel-body">
               <form name="form" role="form" class="form-horizontal" novalidate>
