Update example index

--- a/example/index.html
+++ b/example/index.html
@@ -27,6 +27,9 @@
                 <li>
                   <a href="./angular-translate.html">Angular Translate Support</a>
                 </li>
+                <li>
+                  <a href="./feedback-form.html">Input Feedback</a>
+                </li>
               </ul>
             </div>
           </div>
